--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <header><title>PPA Cost Analysis</title></header>
 <body>
-<iframe height="600px" width="100%" src="https://repl.it/@brybear22/PPA-Model?lite=true&outputonly=1" scrolling="no" frameborder="yes" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+<iframe height=1200px" width="100%" src="https://repl.it/@brybear22/PPA-Model?lite=true&outputonly=1" scrolling="no" frameborder="yes" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
 </body>
 </html>
